# Broccoli

./: .gitignore  Dockerfile  LICENSE  NEXTUPDATE.MD  README.md  TECHREVIEW.MD  TODO  UPDATING.MD  USAGE.md  __init__.py  chain_main.py  config.py  docker-compose.yaml  duplicate_1.txt  error_test.py  example.md  fan_out_test.py  feature_test_main.py  main.py  publish.ps1  pyproject.toml  test.py  test_file_1.txt  test_file_2.txt  test_file_3.txt  video_main.py
broccoli/: cli.py  logging_config.py
broccoli/core/: __init__.py  chain_mixin.py  chain_queue.py  health.py  redis_controller.py  result.py  task_chain.py  task_queue.py  task_registry.py
broccoli/core/chain/: chain.py  chain_mixin.py  chain_queue.py  task_chain.py
broccoli/core/gpu/: gpu_queue.py
broccoli/core/task/: task.py  task_queue.py  task_registry.py
broccoli/workers/: GPUAutoScalingPool.py  __init__.py  async_worker.py  auto_scale_worker.py  base_worker.py  chain_worker.py  gpu_worker.py  hybrid_worker.py  threaded_worker.py  worker_pool.py
data/: dump.rdb
data/appendonlydir/: appendonly.aof.1.base.rdb
extra_docs/: NEXTUPDATE.MD
practice_usage/: chain_main.py  error_test.py  feature_test_main.py  try_later.py  video_main.py
