[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "broccoli"
version = "0.1.0"
description = "A lightweight Redis-backed distributed task queue for Python"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "redis>=4.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
keywords = ["task queue", "redis", "distributed", "workers", "async", "queue", "celery"]

[project.urls]
"Bug Tracker" = "https://github.com/yourusername/broccoli/issues"
Repository = "https://github.com/yourusername/broccoli"

[project.scripts]
broccoli = "broccoli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["broccoli*"]
